[package]
name = "querylib"
version = "0.1.0"
edition = "2021"

[dependencies]
neo4rs = { version = "0.8", features = ["json"] }

sha256 = { version = "1.5" }
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1.12", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

thiserror = { version = "2.0" }
tracing = { version = "0.1" }
